# esys-fall-2020

./: .editorconfig
bug/: README.md
bug/audio/: Cargo.toml
bug/audio/client/: Cargo.toml
bug/audio/client/src/: lib.rs  main.rs  noise_gate.rs
bug/audio/src/: audio.rs
bug/backend/: .gitignore  Cargo.toml
bug/backend/audio/: Cargo.toml
bug/backend/audio-client/: Cargo.toml
bug/backend/audio-client/src/: main.rs  noise_gate.rs
bug/backend/audio/src/: audio.rs  codec.rs  lib.rs
bug/backend/event/: Cargo.toml
bug/backend/event/src/: codec.rs  event.rs  lib.rs
bug/backend/src/: lib.rs  main.rs  server.rs  signal.rs
bug/backend/src/actor/: audio_handler.rs  audio_server.rs  event_handler.rs  event_server.rs  mod.rs
bug/backend/src/actor/db/: mod.rs  user.rs
bug/bug/: .gitignore  CMakeLists.txt  config.h  mbed_app.json
bug/bug/driver/: wifi-ism43362.lib
bug/bug/driver/bsp-stm32l475/: CMakeLists.txt  accelero.c  accelero.h  bsp.c  gyro.c  gyro.h
bug/bug/driver/bsp-stm32l475/components/lsm6dsl/: lsm6dsl.h
bug/bug/script/: compile.sh
bug/bug/src/: bug_event.h  bug_event_client.h  client_bug_event.h  client_tcp.h  config.h  logger.h  logger_netsocket.h  main.cpp  noise_gate.h  tracker_position.h  util.h  wifi.h
bug/frontend/: .eslintrc  next.config.js  package.json  tsconfig.json
bug/frontend/components/Icon/: Bug.tsx  Github.tsx
bug/frontend/components/Layout/: Footer.tsx  Header.tsx  Main.tsx  index.tsx
bug/frontend/config/: index.ts  publicRuntime.js
bug/frontend/constants/: index.ts
bug/frontend/pages/: _app.tsx  _document.tsx  index.tsx
bug/frontend/theme/: index.ts
bug/frontend/theme/components/: index.ts
bug/server/: Cargo.toml
hw3/c/: CMakeLists.txt  main.cxx
hw3/go/: go.mod  go.sum  main.go
hw3/py/: main.py
hw5/: README.md
hw5/gatt-client/: CMakeLists.txt  gatt-client.c
hw5/gatt-server/: .gitignore
hw5/gatt-server/src/: ble_logger.h  ble_process.h  main.cpp  service_button.h  service_led.h  service_student_id.h
hw7/: README.md
hw7/accelero-client/: .mbed  mbed_app.json
hw7/accelero-client/driver/: wifi-ism43362.lib
hw7/accelero-client/src/: client.h  logger.h  main.cpp  ns_logger.h  service_accelero.h  service_button.h
hw7/accelero-server/: .eslintrc  .prettierrc  package-lock.json  package.json  server.js  webpack.config.js
hw7/accelero-server/public/: index.css  index.html
hw7/accelero-server/src/: index.js
hw7/accelero-server/src/shader/: bloom.frag
hw8/: README.md  main.py
