[package]
name = "audio"
version = "0.1.0"
authors = ["han0110 <tinghan0110@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.10.0"
bincode = "1.3.1"
bytes = "0.5.6"
cpal = "0.13.1"
hound = "3.4.0"
serde = { version = "1.0.118", features = ["serde_derive"] }
tokio-util = { version = "0.3.1", features = ["codec", "udp"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }

[workspace]
members = ["client"]
