[package]
name = "backend"
version = "0.1.0"
authors = ["han0110 <tinghan0110@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.10.0"
actix-web = "3.3.2"
anyhow = "1.0.35"
audio = { path = "./audio" }
bincode = "1.3.1"
bytes = "0.5.0"
diesel = { version = "1.4.5", features = ["postgres", "r2d2"] }
diesel-derive-enum = { version = "1.1.0", features = ["postgres"] }
futures = "0.3.8"
hound = "3.4.0"
num_cpus = "1.13.0"
structopt = { version = "0.3.21" }
serde = { version = "1.0.118" }
tokio = "0.2.6"
tokio-util = { version = "0.3.1", features = ["codec", "udp"] }
uuid = "0.8.1"

[workspace]
members = ["audio", "audio-client"]
