[package]
name = "server"
version = "0.1.0"
authors = ["han0110 <tinghan0110@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.10.0"
actix-rt = "1.1.1"
anyhow = "1.0.35"
audio = { path = "../audio" }
bincode = "1.3.1"
bytes = "0.5.0"
futures-util = "0.3.8"
hound = "3.4.0"
structopt = { version = "0.3.21" }
tokio = "0.2.6"
tokio-util = { version = "0.3.1", features = ["codec", "udp"] }
uuid = "0.8.1"
