[package]
name = "audio-client"
version = "0.1.0"
authors = ["han0110 <tinghan0110@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.10.0"
actix-rt = "1.1.1"
anyhow = "1.0.35"
audio = { path = "../audio" }
cpal = "0.13.1"
crossbeam-channel = "0.5.0"
crossbeam-queue = "0.3.1"
dasp = { version = "0.11.0", features = ["ring_buffer"] }
futures = "0.3.8"
futures-sink = "0.3.8"
futures-util = "0.3.8"
structopt = { version = "0.3.21" }
tokio = { version = "0.2.24", features = ["signal"] }
tokio-util = { version = "0.3.1", features = ["codec", "udp"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
